@@ -407,224 +407,6 @@ class pts_network
 			echo PHP_EOL . 'The file_uploads option in your PHP configuration must be enabled for network support.' . PHP_EOL . PHP_EOL;
 		}
 	}
-	public static function get_active_network_interface()
-	{
-		$dev = '';
-
-		// try and get the device with the default route
-		if ($ip = pts_client::executable_in_path('ip'))
-		{
-			$out = shell_exec("$ip route 2>&1");
-			$start = strpos($out, ' dev ');
-			if($start !== false)
-			{
-				$start += 5; // length of ' dev '
-				if(($xx = strpos($out, ' ', $start)) !== false)
-				{
-					$dev = substr($out, $start, $xx - $start);
-				}
-			}
-		}
-
-		// we grab the last field of the `netstat -nr` output, betting on *bsd not expiring it's default route
-		if(empty($dev) && $netstat = pts_client::executable_in_path('netstat')) {
-			$out = shell_exec("$netstat -rn 2>&1");
-			$lines = explode("\n", $out);
-			foreach ($lines as $line) {
-				$start = substr($line,0,7);
-				if ($start == '0.0.0.0' || $start === 'default') {
-					$dev = trim(substr(trim($line),strrpos($line,' ')));
-					return $dev;
-				}
-			}
-		}
-		return $dev;
-	}
-	public static function get_local_ip()
-	{
-		$local_ip = false;
-		$interface = self::get_active_network_interface();
-
-		if(($ifconfig = pts_client::executable_in_path('ifconfig')))
-		{
-			$ifconfig = shell_exec($ifconfig . " $interface 2>&1");
-			$offset = 0;
-			while(($ipv4_pos = strpos($ifconfig, 'inet addr:', $offset)) !== false)
-			{
-				$ipv4 = substr($ifconfig, $ipv4_pos + strlen('inet addr:'));
-				$ipv4 = substr($ipv4, 0, strpos($ipv4, ' '));
-				$local_ip = $ipv4;
-
-				if($local_ip != '127.0.0.1' && $local_ip != null)
-				{
-					break;
-				}
-				$offset = $ipv4_pos + 1;
-			}
-			if($local_ip == null)
-			{
-				while(($ipv4_pos = strpos($ifconfig, 'inet ', $offset)) !== false)
-				{
-					$ipv4 = substr($ifconfig, $ipv4_pos + strlen('inet '));
-					$ipv4 = substr($ipv4, 0, strpos($ipv4, ' '));
-					$local_ip = $ipv4;
-
-					if($local_ip != '127.0.0.1' && $local_ip != null)
-					{
-						break;
-					}
-					$offset = $ipv4_pos + 1;
-				}
-			}
-		}
-		else if(phodevi::is_windows())
-		{
-			$ipconfig = shell_exec('ipconfig');
-			$offset = 0;
-
-			while(($ipv4_pos = strpos($ipconfig, 'IPv4 Address.', $offset)) !== false)
-			{
-				$ipv4 = substr($ipconfig, $ipv4_pos);
-				$ipv4 = substr($ipv4, strpos($ipv4, ': ') + 2);
-				$ipv4 = substr($ipv4, 0, strpos($ipv4, "\n"));
-				$local_ip = trim($ipv4);
-
-				if($local_ip != '127.0.0.1' && $local_ip != null && strpos($local_ip, '169.254') === false)
-				{
-					break;
-				}
-				$offset = $ipv4_pos + 3;
-			}
-		}
-		else if(pts_client::executable_in_path('hostname'))
-		{
-			$hostname_i = explode(' ', trim(shell_exec('hostname -I 2>&1')));
-			$hostname_i = array_shift($hostname_i);
-			if(count(explode('.', $hostname_i)) == 4)
-			{
-				$local_ip = $hostname_i;
-			}
-		}
-
-		if(empty($local_ip) && function_exists('net_get_interfaces'))
-		{
-			// The below code should work as of net_get_interfaces() as of PHP 7.3 in cross-platform manner
-			$net_interfaces = net_get_interfaces();
-			foreach($net_interfaces as $interface => $interface_info)
-			{
-				if(isset($interface_info['unicast'][1]['address']) && !empty($interface_info['unicast'][1]['address']) && $interface_info['unicast'][1]['address'] != '127.0.0.1')
-				{
-					$local_ip = $interface_info['unicast'][1]['address'];
-					break;
-				}
-			}
-		}
-
-		return $local_ip;
-	}
-	public static function get_network_mac()
-	{
-		$mac = false;
-
-		if(phodevi::is_linux())
-		{
-			if($interface = self::get_active_network_interface())
-			{
-				$addr =  "/sys/class/net/$interface/address";
-				if(is_file($addr))
-				{
-					$mac = pts_file_io::file_get_contents($addr);
-				}
-			}
-
-			if(empty($mac))
-			{
-				foreach(pts_file_io::glob('/sys/class/net/*/operstate') as $net_device_state)
-				{
-					if(pts_file_io::file_get_contents($net_device_state) == 'up')
-					{
-						$addr = dirname($net_device_state) . '/address';
-						if(is_file($addr))
-						{
-							$mac = pts_file_io::file_get_contents($addr);
-							break;
-						}
-					}
-				}
-			}
-		}
-		else if(phodevi::is_windows())
-		{
-			$getmac = shell_exec('getmac');
-			$getmac = trim(substr($getmac, strpos($getmac, "\n", strpos($getmac, '======='))));
-			$getmac = substr($getmac, 0, strpos($getmac, ' '));
-			if(strlen($getmac) <= 17)
-			{
-				$mac = str_replace('-', ':', $getmac);
-			}
-		}
-
-		if(empty($mac) && ($ifconfig = pts_client::executable_in_path('ifconfig')))
-		{
-			$ifconfig = shell_exec($ifconfig . ' 2>&1');
-			$offset = 0;
-			while(($hwaddr_pos = strpos($ifconfig, 'HWaddr ', $offset)) !== false || ($hwaddr_pos = strpos($ifconfig, 'ether ', $offset)) !== false)
-			{
-				$hw_addr = substr($ifconfig, $hwaddr_pos);
-				$hw_addr = substr($hw_addr, (strpos($hw_addr, ' ') + 1));
-				$hw_addr = substr($hw_addr, 0, strpos($hw_addr, ' '));
-				if(($x = strpos($hw_addr, PHP_EOL)) != false)
-				{
-					$hw_addr = substr($hw_addr, 0, $x);
-				}
-
-				$mac = $hw_addr;
-
-				if($mac != null)
-				{
-					break;
-				}
-				$offset = $hwaddr_pos + 1;
-			}
-		}
-		if(empty($mac) && ($netstat = pts_client::executable_in_path('netstat')))
-		{
-			// Needed on at least OpenBSD as their `ifconfig` does not expose the MAC address
-			$netstat = shell_exec($netstat . ' -in 2>&1');
-			foreach(explode(PHP_EOL, $netstat) as $line)
-			{
-				$line = explode(' ', $line);
-				foreach($line as $i => $r)
-				{
-					if($r == null)
-						unset($line[$i]);
-				}
-				$line = array_values($line);
-
-				if(!isset($line[3]))
-				{
-					continue;
-				}
-
-				$address = explode(':', $line[3]);
-
-				if(count($address) == 6 && $address[0] != '00' && $address[5] != '00')
-				{
-					foreach($address as $seg)
-					{
-						if(strlen($seg) != 2)
-						{
-							continue;
-						}
-					}
-
-					$mac = $line[3];
-				}
-			}
-		}
-
-		return $mac;
-	}
 	public static function get_network_wol()
 	{
 		static $wol_support = null;
